--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <main>
     <section id="product-list" class="products"></section>
+    <div id="pagination" style="text-align:center; margin:20px 0;"></div>
 </main>
 
 <script type="module">
@@ -28,7 +29,7 @@ const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZS
 const supabase = createClient(supabaseUrl, supabaseKey);
 
 
-let allProducts = [];
+
 
 
 function getUserId() {
@@ -107,6 +108,98 @@ document.addEventListener('DOMContentLoaded', () => {
     updateCartCount();
     loadProducts();
 });
+
+
+
+let allProducts = [];
+let currentPage = 1;
+const productsPerPage = 12;
+
+async function loadProducts() {
+    const container = document.getElementById('product-list');
+    try {
+        const response = await fetch('https://makeup-api.herokuapp.com/api/v1/products.json?product_type=lipstick');
+        if (!response.ok) throw new Error('Σφάλμα API');
+
+        const products = await response.json();
+        const excludedNames = ["Lippie Stix", "Lipstick", "Generation G"];
+
+        const validProducts = products.filter(p =>
+            p.image_link && p.image_link.trim() !== "" &&
+            p.price && parseFloat(p.price) > 0 &&
+            !excludedNames.includes(p.name?.trim())
+        );
+
+        allProducts = validProducts;
+        showPage(currentPage);
+        renderPaginationButtons();
+    } catch (error) {
+        console.error(error);
+        container.innerHTML = "<p>Αποτυχία φόρτωσης προϊόντων από το API.</p>";
+    }
+}
+
+function showPage(page) {
+    const container = document.getElementById('product-list');
+    const start = (page - 1) * productsPerPage;
+    const end = start + productsPerPage;
+    const pageProducts = allProducts.slice(start, end);
+
+    container.innerHTML = pageProducts.map(p => {
+        const productId = p.id ? p.id.toString() : p.name.replace(/\s+/g, "_");
+        const name = (p.name || "Άγνωστο").replace(/"/g, '&quot;');
+        const price = parseFloat(p.price).toFixed(2);
+        const imgSrc = p.image_link;
+
+        return `
+            <div class="product">
+                <div class="product-img-container">
+                    <img src="${imgSrc}" alt="${name}" onerror="this.src='https://via.placeholder.com/150x150?text=No+Image'">
+                </div>
+                <h2>${name}</h2>
+                <p>Τιμή: ${price}€</p>
+                <button onclick="addToCart('${productId}')">🛒</button>
+            </div>
+        `;
+    }).join('');
+}
+
+function renderPaginationButtons() {
+    const paginationContainer = document.getElementById('pagination');
+    if (!paginationContainer) return;
+
+    const totalPages = Math.ceil(allProducts.length / productsPerPage);
+    let buttonsHTML = '';
+
+    for (let i = 1; i <= totalPages; i++) {
+        buttonsHTML += `<button class="page-btn ${i === currentPage ? 'active' : ''}" onclick="goToPage(${i})">${i}</button>`;
+    }
+
+    paginationContainer.innerHTML = buttonsHTML;
+}
+
+function goToPage(page) {
+    currentPage = page;
+    showPage(currentPage);
+    renderPaginationButtons();
+}
+
+window.addToCart = addToCart;
+window.goToPage = goToPage;
+
+document.addEventListener('DOMContentLoaded', () => {
+    const loginBtn = document.querySelector(".login-btn");
+    const username = localStorage.getItem("username");
+    if (username) {
+        loginBtn.textContent = `👤 ${username}`;
+        loginBtn.href = "profile.html";
+    }
+
+    updateCartCount();
+    loadProducts();
+});
+
+
 </script>
 </body>
 </html>
